--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Welcome to GM-Finder!</title>
 </head>
-<body>
-    
+<body class="min-100-vh flex column">
+    <header class="p-5 text-center text-dark">
+    <h1>Game & Movie Finder</h1>
+    </header>
+    <form id="form" class="p-1 text-center"> 
+        <input type="search" id="query" name="q" placeholder="Search...">
+        <button>Search</button>
+      </form>
+      <body>
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-block">
+                    <h4 class="card-title">Card title</h4>
+                    <p class="card-text">
+                        This is a longer card with supporting 
+                        text below as a natural lead-in to 
+                        additional content. This content
+                        is a little bit longer.
+                    </p>
+                </div>
+            </div>
+            <body>
+                <div class="card-deck">
+                    <div class="card">
+                        <div class="card-block">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">
+                                This is a longer card with supporting 
+                                text below as a natural lead-in to 
+                                additional content. This content
+                                is a little bit longer.
+                            </p>
+                        </div>
+                    </div>
+                
 </body>
 
 <script src="./script.js"></script>
