added search button functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="p-5 text-center text-dark">
     <h1>Game & Movie Finder</h1>
     </header>
-    <form id="form" class="p-1 text-center"> 
+    <form id="searchBar" class="p-1 text-center"> 
         <input type="search" id="query" name="q" placeholder="Search...">
         <button>Search</button>
       </form>
