--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <div class="card-deck">
             <div class="card">
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="movieResults">Movie Results</h4>
                     <p class="card-text">
-                        This is a longer card with supporting 
-                        text below as a natural lead-in to 
-                        additional content. This content
-                        is a little bit longer.
+                        This is placeholder text for movie search results
                     </p>
                 </div>
             </div>
@@ -33,12 +30,9 @@
                 <div class="card-deck">
                     <div class="card">
                         <div class="card-block">
-                            <h4 class="card-title">Card title</h4>
+                            <h4 class="card-title">Game Results</h4>
                             <p class="card-text">
-                                This is a longer card with supporting 
-                                text below as a natural lead-in to 
-                                additional content. This content
-                                is a little bit longer.
+                                This is placeholder text for game results
                             </p>
                         </div>
                     </div>
