created function for movie card

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <div class="card col-6">
             <div class="card-block">
                 <h3 class="movieResults">Movie Results</h3>
-                <p class="movieResultText">
+                <p class="actors"></p>
+                <p class="genre"></p>
+                <p class="plot">
                     This is placeholder text for movie search results </p>
+                    <p class="metascore"></p>
             </div>
         </div>
         
