--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <div class="card col-6">
             <div class="card-block">
                 <h3 class="gameResults">Game Results</h3>
-                <p class="gameResultText">
-                    This is placeholder text for game results
-                </p>
+                <p class="esrb"></p>
+                <p class="release"></p>
+                <p class="rating"></p>
+                <p class="meta"></p>
             </div>
         </div>
     </div>
