added html text and seperated cards

--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
         <button>Search</button>
     </form>
     <body>
-    <div class="row">
-        <div class="card col-6">
+    <div class="row p-4" style="height: 20rem;">
+        <div class="card col-md-5">
             <div class="card-block">
                 <h3 class="movieResults">Movie Results</h3>
-                <p class="actors"></p>
-                <p class="genre"></p>
-                <p class="plot">
-                    This is placeholder text for movie search results </p>
-                    <p class="metascore"></p>
+                <p class="actors">Actors and Acctresses</p>
+                <p class="genre">Genre of Movie</p>
+                <p class="plot">Plot of Film</p>
+                <p class="metascore">Metascore</p>
             </div>
         </div>
         
-        <div class="card col-6">
+        <div class="card col-md-5 offset-md-2">
             <div class="card-block">
                 <h3 class="gameResults">Game Results</h3>
-                <p class="esrb"></p>
-                <p class="release"></p>
-                <p class="rating"></p>
-                <p class="meta"></p>
+                <p class="esrb">ESRB Rating (E-NR)</p>
+                <p class="release">Release Date</p>
+                <p class="rating">Game Rating</p>
+                <p class="meta">Metacritic Rating</p>
             </div>
         </div>
     </div>
