finished game API and function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="min-100-vh flex column">
     <header class="p-5 text-center text-dark">
-        <h1>Game & Movie Finder</h1>
+        <h1>Movie & Game Finder</h1>
     </header>
     <form id="searchBar" class="p-1 text-center"> 
         <input type="search" id="query" name="q" placeholder="Search...">
@@ -21,7 +21,7 @@
         <div class="card col-md-5">
             <div class="card-block">
                 <h3 class="movieResults">Movie Results</h3>
-                <p class="actors">Actors and Acctresses</p>
+                <p class="actors">Cast</p>
                 <p class="genre">Genre of Movie</p>
                 <p class="plot">Plot of Film</p>
                 <p class="metascore">Metascore</p>
@@ -31,10 +31,10 @@
         <div class="card col-md-5 offset-md-2">
             <div class="card-block">
                 <h3 class="gameResults">Game Results</h3>
-                <p class="esrb">ESRB Rating (E-NR)</p>
+                <p class="esrb">ESRB Rating</p>
                 <p class="release">Release Date</p>
-                <p class="rating">Game Rating</p>
-                <p class="meta">Metacritic Rating</p>
+                <p class="gameGenre">Game Genre</p>
+                <p class="platform">Available platform</p>
             </div>
         </div>
     </div>
@@ -47,6 +47,7 @@
             
             </div>
         </div>
+        <!-- make footer stay at the bottom of the screen -->
         <div class="row">
             <div class="col l12 m12 s12">
                 <ul id="credits">
