--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Welcome to GM-Finder!</title>
 </head>
-<body class="min-100-vh flex column">
+<body class="d-flex flex-column min-100-vh ">
     <header class="p-5 text-center text-dark">
         <h1>Movie & Game Finder</h1>
     </header>
@@ -17,9 +17,9 @@
         <button>Search</button>
     </form>
     <body>
-    <div class="row p-4" style="height: 20rem;">
+    <div class="row p-4" style="height: 32rem;">
         <div class="card col-md-5">
-            <div class="card-block">
+            <div class="card-block p-4 background-color: red;">
                 <h3 class="movieResults">Movie Results</h3>
                 <p class="actors">Cast</p>
                 <p class="genre">Genre of Movie</p>
@@ -38,27 +38,12 @@
             </div>
         </div>
     </div>
-    <footer class="page-footer">
-        <div class="container">
-            <div class="row">
-            <div class="col s12">
-                <h5 class="footer-title">Developed By:</h5>
-            </div>
-            
-            </div>
-        </div>
-        <!-- make footer stay at the bottom of the screen -->
-        <div class="row">
-            <div class="col l12 m12 s12">
-                <ul id="credits">
-                    <li><p>Cory Pendergraft</p><p><a href="https://github.com/CoryPendergraft0" target="_blank">github.com/CoryPendergraft</a></p></li>
-                    <li><p>Tanner Lumsden</p><p><a href="https://github.com/ChampionTan" target="_blank">github.com/ChampionTan</a></p></li>
-                    <li><p>Octevion Massey</p><p><a href="https://github.com/omassey1" target="_blank">github.com/omassey1</a></p></li>
-                </ul>
-            </div>
-        </div>
+    <footer class="mt-auto" style="justify-content: end;">
+        <div class="row ">
+            <div class="col"><a class="" href="#"><span>Tanner Lumsden</span></a></div>
+            <div class="col"><a class="" href="#"><span>Octevion Massey</span></a></div>
+            <div class="col"><a class="" href="#"><span>Cory Pendergraft</span></a></div>
     </footer>
-                
 </body>
 
 <script src="./script.js"></script>
