--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </form>
     <body>
     <div class="row p-4" style="height: 32rem;">
-        <div class="card col-md-5">
-            <div class="card-block p-4 background-color: red;">
+        <div class="card col-md-5 text-white bg-secondary">
+            <div class="card-block p-4">
                 <h3 class="movieResults">Movie Results</h3>
                 <p class="actors">Cast</p>
                 <p class="genre">Genre of Movie</p>
@@ -28,8 +28,8 @@
             </div>
         </div>
         
-        <div class="card col-md-5 offset-md-2">
-            <div class="card-block">
+        <div class="card col-md-5 offset-md-2 text-white bg-secondary">
+            <div class="card-block p-4">
                 <h3 class="gameResults">Game Results</h3>
                 <p class="esrb">ESRB Rating</p>
                 <p class="release">Release Date</p>
@@ -38,11 +38,14 @@
             </div>
         </div>
     </div>
-    <footer class="mt-auto" style="justify-content: end;">
-        <div class="row ">
-            <div class="col"><a class="" href="#"><span>Tanner Lumsden</span></a></div>
-            <div class="col"><a class="" href="#"><span>Octevion Massey</span></a></div>
-            <div class="col"><a class="" href="#"><span>Cory Pendergraft</span></a></div>
+    <footer class="fixed-bottom">
+        <div class="row bg-secondary">
+            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/ChampionTan" target="_blank">Tanner Lumsden</a>
+            </div>
+            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/Omassey1" target="_blank">Octevion Massey</a>
+            </div>
+            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/CoryPendergraft0" target="_blank">Cory Pendergraft</a>
+            </div>
     </footer>
 </body>
 
