--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <form id="searchBar" class="p-1 text-center"> 
         <input type="search" id="query" name="q" placeholder="Search...">
-        <button>Search</button>
+        <button class="searchBtn">Search</button>
     </form>
     <body>
     <div class="row p-4" style="height: 32rem;">
@@ -38,13 +38,14 @@
             </div>
         </div>
     </div>
-    <footer class="fixed-bottom">
+    <footer class="fixed-bottom text-center">
         <div class="row bg-secondary">
-            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/ChampionTan" target="_blank">Tanner Lumsden</a>
+            <h5 class="text-dark">Collaborators:</h5>
+            <div class="col-md-4 p-2"><a class="text-white text-decoration-none" href="https://github.com/ChampionTan" target="_blank">Tanner Lumsden</a>
             </div>
-            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/Omassey1" target="_blank">Octevion Massey</a>
+            <div class="col-md-4 p-2"><a class="text-white text-decoration-none" href="https://github.com/Omassey1" target="_blank">Octevion Massey</a>
             </div>
-            <div class="col-md-4 p-4"><a class="text-white text-decoration-none" href="https://github.com/CoryPendergraft0" target="_blank">Cory Pendergraft</a>
+            <div class="col-md-4 p-2"><a class="text-white text-decoration-none" href="https://github.com/CoryPendergraft0" target="_blank">Cory Pendergraft</a>
             </div>
     </footer>
 </body>
