--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
+    <!-- Bootstrap link below -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+<!-- Google font link below -->
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="assets\style.css"/>
@@ -17,11 +17,13 @@
     <header class="p-5 text-center text-dark">
         <h1 class="title">Movie & Game Finder</h1>
     </header>
+    <!-- search bar functions -->
     <form id="searchBar" class="p-1 text-center"> 
         <input type="search" id="query" name="q" placeholder="Search...">
         <button class="searchBtn">Search</button>
     </form>
     <body>
+        <!-- Movie results for the card -->
     <div class="row p-4" style="height: 32rem;">
         <div class="card col-md-5 text-dark bg-warning">
             <div class="card-block p-4 text-center">
@@ -32,7 +34,7 @@
                 <p class="metascore">Metascore</p>
             </div>
         </div>
-        
+        <!-- Video game results for the card -->
         <div class="card col-md-5 offset-md-2 text-white bg-dark text-center">
             <div class="card-block p-4">
                 <h2 class="gameResults text-danger p-4">Game Results</h2>
@@ -43,6 +45,7 @@
             </div>
         </div>
     </div>
+    <!-- footer with links to all 3 of our githubs -->
     <footer class="fixed-bottom text-center">
         <div class="row">
             <h5 class="text-white">Collaborators:</h5>
@@ -54,7 +57,6 @@
             </div>
     </footer>
 </body>
-
+<!-- links to our Script as -->
 <script src="assets\script.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </html>
